force-app/main/default/objects/KB_Dimension_Result__c/KB_Dimension_Result__c.object-meta.xml
<CustomObject>
    <description>One record per (article assessment, dimension). Normalised replacement for the flat dimension columns that previously lived on KB_Article_Assessment__c. Enables per-dimension fan-out without row-lock contention.</description>
    <label>KB Dimension Result</label>
    <nameField>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Dimension Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Dimension Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>