force-app/main/default/objects/KB_Dimension_Result__c/fields/Article_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Article_Assessment__c</fullName>
    <description>Parent article assessment. Master-detail — child rows are cascade-deleted with the parent by default.</description>
    <label>Article Assessment</label>
    <referenceTo>KB_Article_Assessment__c</referenceTo>
    <relationshipLabel>Dimension Results</relationshipLabel>
    <relationshipName>Dimension_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>