force-app/main/default/objects/KB_Dimension_Result__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <description>Dimension DeveloperName from KB_Scoring_Dimension__mdt (e.g. Completeness, Structure). Validation rule enforces that the value matches an active CMDT record.</description>
    <label>Dimension</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>