force-app/main/default/objects/KB_Dimension_Result__c/fields/Execution_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Ms__c</fullName>
    <description>Wall-clock milliseconds spent scoring this dimension for this article. Stamped by KBScorerBase.score. Used for per-dim performance analysis.</description>
    <label>Execution (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>