force-app/main/default/objects/KB_Dimension_Result__c/fields/Is_Unassessable__c.field-meta.xml
<CustomField>
    <fullName>Is_Unassessable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when scoring could not run (e.g. article has no content body for Structure/Clarity). Score__c is null in that case.</description>
    <label>Is Unassessable</label>
    <type>Checkbox</type>
</CustomField>