force-app/main/default/objects/KB_Dimension_Result__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>Scorer-generated explanation. May include LLM output when hybrid scoring is enabled.</description>
    <label>Reasoning</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>