force-app/main/default/objects/KB_Dimension_Result__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>0-100 dimension score. Nullable: null means not selected / not assessable / not yet scored. Callers distinguish 0 (scored and bad) from null (not scored).</description>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>