force-app/main/default/objects/KB_Dimension_Result__c/fields/Scorer_Mode__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Mode__c</fullName>
    <description>Observability: how this score was computed. Typical values: Deterministic, Hybrid, LLM_Fallback_Deterministic, Pipeline_Default.</description>
    <label>Scorer Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>